--- a/app/src/main/res/layout/fragment_ticket_port.xml
+++ b/app/src/main/res/layout/fragment_ticket_port.xml
@@ -28,7 +28,7 @@
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp"
+        android:padding="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -43,6 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="35dp"
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,6 +85,17 @@
                             android:background="@color/colorDarkBlue"
                             android:textColor="#F7F7F7"
                             android:text="Tổng ONU"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/txt_slOnuErr"
+                            android:layout_marginLeft="3dp"
+                            android:layout_width="80dp"
+                            android:layout_height="40dp"
+                            android:gravity="center"
+                            android:background="@color/colorDarkBlue"
+                            android:textColor="#F7F7F7"
+                            android:text="SL ONU(Rx&lt;-28.5)"
                             android:textSize="14sp"
                             android:textStyle="bold" />
                         <TextView
