--- a/app/src/main/res/layout/ticket_port.xml
+++ b/app/src/main/res/layout/ticket_port.xml
@@ -12,7 +12,7 @@
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="40dp"
             android:padding="1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +55,17 @@
                     android:background="@color/colorLightGray"
                     android:textColor="#000000"
                     android:text="Tổng ONU"
+                    android:textSize="14sp"
+                    android:textStyle="normal" />
+                <TextView
+                    android:id="@+id/txt_slOnuErr"
+                    android:layout_marginLeft="3dp"
+                    android:layout_width="80dp"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:background="@color/colorLightGray"
+                    android:textColor="#000000"
+                    android:text="SL Onu Er"
                     android:textSize="14sp"
                     android:textStyle="normal" />
                 <TextView
