--- a/app/src/main/res/navigation/mobile_navigation_docsis_mb.xml
+++ b/app/src/main/res/navigation/mobile_navigation_docsis_mb.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation_docsis_mb"
-    app:startDestination="@id/nav_send">
+    app:startDestination="@id/nav_docsis_doc">
     <fragment
         android:id="@+id/nav_node_mb"
         android:name="com.example.monitordocsis.systemdocsis_mb.Node.FragmentNode"
@@ -28,9 +28,10 @@
         android:label="@string/menu_cablemodem"
         tools:layout="@layout/fragment_cablemodem" />
     <fragment
-        android:id="@+id/nav_send"
-        android:name="com.example.monitordocsis.ui.send.SendFragment"
+        android:id="@+id/nav_docsis_doc"
+        android:name="com.example.monitordocsis.ui.document.FragmentDocsisDoc"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
+
 
 </navigation>
